--- a/css/header.css
+++ b/css/header.css
@@ -111,7 +111,7 @@ ul {
 
 
 /*Responsive header part*/
-@media (max-width: 1100px) {
+@media (max-width: 768px) {
     .header {
         width: 100vw !important;
         height: 5rem;
@@ -125,18 +125,6 @@ ul {
 
     .mobileMenu {
         display: block;
-    }
-
-    .board {
-        flex-wrap: wrap;
-        width: 100% !important;
-        padding-bottom: 16px;
-        margin-top: 80px;
-    }
-
-    .boardSection {
-        height: 65vh;
-        width: 100%;
     }
 
     .mainNav {
